<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_aazuloscuro_gris"
        tools:context=".CuentaActivity">

        <ImageView
            android:id="@+id/logo_movimiento"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo_magic_jitc"

            app:layout_constraintBottom_toTopOf="@id/textoSuperior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_weight="1"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/fragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00000000"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/list_black"
            android:layout_marginVertical="35dp"

            app:layout_constraintBottom_toBottomOf="@id/textoSuperior"
            app:layout_constraintEnd_toStartOf="@id/textoSuperior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textoSuperior"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="2"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textoSuperior"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/mi_cuenta"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_30sp"
            android:paddingEnd="30dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment"
            app:layout_constraintTop_toBottomOf="@id/logo_movimiento"
            app:layout_constraintBottom_toTopOf="@id/textNombre"
            app:layout_constraintHorizontal_weight="10"
            app:layout_constraintVertical_weight="3"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textAlignment="textEnd"
            android:paddingEnd="3dp"
            android:shadowColor="@color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textoSuperior"
            app:layout_constraintEnd_toStartOf="@id/textNombre2"
            app:layout_constraintBottom_toTopOf="@id/textCorreo"
            app:layout_constraintVertical_weight="2"/>

        <TextView
            android:id="@+id/textNombre2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tunombre"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:paddingStart="3dp"
            android:shadowColor="@color/verde_esmeralda"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            tools:ignore="RtlSymmetry"

            app:layout_constraintStart_toEndOf="@id/textNombre"
            app:layout_constraintTop_toBottomOf="@id/textoSuperior"
            app:layout_constraintBottom_toTopOf="@id/textCorreo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="2"/>

        <TextView
            android:id="@+id/textCorreo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/correo_electr_nico"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textAlignment="textEnd"
            android:paddingEnd="3dp"
            android:shadowColor="@color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            tools:ignore="RtlSymmetry"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNombre"
            app:layout_constraintEnd_toStartOf="@id/textCorreo2"
            app:layout_constraintBottom_toTopOf="@id/textCartas"
            app:layout_constraintVertical_weight="2"/>

        <TextView
            android:id="@+id/textCorreo2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tucorreoelectronico"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:paddingStart="3dp"
            android:shadowColor="@color/verde_esmeralda"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            tools:ignore="RtlSymmetry"

            app:layout_constraintStart_toEndOf="@id/textCorreo"
            app:layout_constraintTop_toBottomOf="@id/textNombre2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/numCartas"
            app:layout_constraintVertical_weight="2"/>

        <TextView
            android:id="@+id/textCartas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/n_de_cartas_en_propiedad"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textAlignment="textEnd"
            android:paddingEnd="3dp"
            android:shadowColor="@color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            tools:ignore="RtlSymmetry"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCorreo"
            app:layout_constraintEnd_toStartOf="@id/numCartas"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintVertical_weight="2" />

        <TextView
            android:id="@+id/numCartas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:paddingStart="3dp"
            android:shadowColor="@color/verde_esmeralda"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            tools:ignore="RtlSymmetry"

            app:layout_constraintStart_toEndOf="@id/textCartas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCorreo2"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintVertical_weight="2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/imagen_magics_genericas"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Menú lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
