<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/fondo_transparente_bordes_negro">

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/mostrar_imagen_carta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="6dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mostrar_nombre_carta"
        app:layout_constraintVertical_weight="5"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/comprador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@id/mostrar_imagen_carta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/nombre_comprador"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:background="@color/gris_neutro"
        android:layout_marginTop="6dp"/>


    <TextView
        android:id="@+id/mostrar_nombre_carta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_carta"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:background="@color/gris_neutro"
        app:layout_constraintTop_toBottomOf="@id/mostrar_imagen_carta"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="6dp"
        app:layout_constraintEnd_toStartOf="@id/mostrar_precio_carta"
        app:layout_constraintBottom_toTopOf="@id/mostrar_descripcion_carta"
        app:layout_constraintVertical_weight="1"/>


    <TextView
        android:id="@+id/mostrar_precio_carta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/precio_carta"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:background="@color/gris_neutro"
        android:layout_marginEnd="6dp"
        app:layout_constraintTop_toBottomOf="@id/mostrar_imagen_carta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mostrar_nombre_carta"
        app:layout_constraintBottom_toTopOf="@id/mostrar_descripcion_carta"/>

    <TextView
        android:id="@+id/mostrar_descripcion_carta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_carta"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:layout_marginBottom="6dp"
        android:paddingEnd="70dp"
        android:layout_marginHorizontal="6dp"
        android:background="@color/gris_neutro"
        app:layout_constraintTop_toBottomOf="@id/mostrar_nombre_carta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="3"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:paddingHorizontal="4dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/delete_negro"
        android:background="@drawable/fondo_boton_verde_cian"
        app:layout_constraintTop_toTopOf="@id/mostrar_precio_carta"
        app:layout_constraintBottom_toBottomOf="@id/mostrar_descripcion_carta"
        app:layout_constraintEnd_toEndOf="@id/mostrar_descripcion_carta"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/aceptar_solicitud_btn"
        android:layout_width="40dp"
        android:paddingHorizontal="4dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/aceptar_icon"
        android:background="@drawable/fondo_boton_verde_cian"
        app:layout_constraintTop_toTopOf="@id/mostrar_precio_carta"
        app:layout_constraintBottom_toBottomOf="@id/mostrar_descripcion_carta"
        app:layout_constraintEnd_toEndOf="@id/mostrar_descripcion_carta"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/enviar_solicitud_btn"
        android:layout_width="wrap_content"
        android:paddingHorizontal="4dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/enviar_icon"
        android:background="@drawable/fondo_boton_verde_cian"
        app:layout_constraintTop_toTopOf="@id/mostrar_precio_carta"
        app:layout_constraintBottom_toBottomOf="@id/mostrar_descripcion_carta"
        app:layout_constraintEnd_toStartOf="@id/delete_btn"
        tools:ignore="ContentDescription"/>


    <ImageButton
        android:id="@+id/rechazar_solicitud_btn"
        android:layout_width="40dp"
        android:paddingHorizontal="4dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/rechazar_icon"
        android:background="@drawable/fondo_boton_verde_cian"
        app:layout_constraintTop_toTopOf="@id/mostrar_precio_carta"
        app:layout_constraintBottom_toBottomOf="@id/mostrar_descripcion_carta"
        app:layout_constraintEnd_toStartOf="@id/aceptar_solicitud_btn"
        tools:ignore="ContentDescription"/>










</androidx.constraintlayout.widget.ConstraintLayout>